--- a/src/css/style.css
+++ b/src/css/style.css
@@ -716,6 +716,29 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
   width: 50%;
   margin-bottom: 0;
 }
+.weapon-name {
+  flex: 0 0 50%;
+  width: 50%;
+  color: #CDB48E;
+  cursor: pointer;
+  text-align: center;
+  transition: transform 0.2s;
+}
+.weapon-name:hover {
+  transform: scale(1.1);
+}
+.picto-name {
+  display: block;
+  width: 100%;
+  margin-bottom: 6px;
+  color: #CDB48E;
+  cursor: pointer;
+  text-align: center;
+  transition: transform 0.2s;
+}
+.picto-name:hover {
+  transform: scale(1.1);
+}
 .weapon-detail,
 .picto-detail {
   font-size: 0.9em;
