--- a/src/css/style.css
+++ b/src/css/style.css
@@ -506,6 +506,14 @@ body[data-page="weapons"] .card-back {
     padding: 0 20px 10px 20px;
 }
 
+.burger-btn {
+    display: none;
+    background: none;
+    border: none;
+    color: #b6e4ff;
+    font-size: 1.8em;
+}
+
 .header-right {
   margin-left: auto;
   display: flex;
@@ -524,6 +532,34 @@ body[data-page="weapons"] .card-back {
   .navbar-nav .nav-item {
     margin: 0 10px;
   }
+
+@media (max-width: 800px) {
+  .navbar .header-inner {
+    flex-wrap: wrap;
+  }
+  .burger-btn {
+    display: block;
+    margin-left: auto;
+  }
+  .navbar-nav {
+    width: 100%;
+    flex-direction: column;
+    margin-top: 10px;
+    display: none;
+  }
+  .navbar-nav.show {
+    display: flex;
+  }
+  .navbar-nav .nav-item {
+    margin: 5px 0;
+  }
+  .header-right {
+    margin-left: 0;
+    width: 100%;
+    justify-content: flex-end;
+    margin-top: 10px;
+  }
+}
 
 .lang-flags {
   display: flex;
