--- a/src/css/style.css
+++ b/src/css/style.css
@@ -539,7 +539,7 @@ body[data-page="weapons"] .card-back {
     margin-left: auto;
   }
   .navbar {
-    min-height: 80px;
+    min-height: 120px;
   }
   .navbar-brand {
     font-size: 1.6rem;
@@ -551,11 +551,17 @@ body[data-page="weapons"] .card-back {
   }
   .nav-collapse.show {
     display: flex;
+    background: rgba(0,0,0,0.5);
+    padding: 10px 0;
   }
   .navbar-nav {
     width: 100%;
     flex-direction: column;
     margin-top: 10px;
+  }
+  .nav-collapse.show .navbar-nav {
+    align-items: flex-end;
+    text-align: right;
   }
   .navbar-nav .nav-item {
     margin: 5px 0;
@@ -570,7 +576,7 @@ body[data-page="weapons"] .card-back {
     gap: 8px;
   }
   body {
-    padding-top: 105px;
+    padding-top: 145px;
   }
 }
 
