--- a/src/css/style.css
+++ b/src/css/style.css
@@ -546,17 +546,18 @@ body[data-page="weapons"] .card-back {
     font-size: 1.6rem;
   }
   .nav-collapse {
-    width: 100%;
     flex-direction: column;
     display: none;
+    align-items: flex-end;
   }
   .nav-collapse.show {
     display: flex;
     background: rgba(0,0,0,0.5);
-    padding: 10px 0;
+    padding: 10px;
+    width: fit-content;
+    margin-left: auto;
   }
   .navbar-nav {
-    width: 100%;
     flex-direction: column;
     margin-top: 10px;
   }
@@ -569,7 +570,6 @@ body[data-page="weapons"] .card-back {
   }
   .header-right {
     margin-left: 0;
-    width: 100%;
     justify-content: flex-end;
     margin-top: 10px;
     flex-direction: column;
