--- a/src/css/style.css
+++ b/src/css/style.css
@@ -818,6 +818,43 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
   font-size: 0.9em;
   margin-bottom: 20px;
 }
+
+.buff-stats-row {
+  display:flex;
+  gap:10px;
+  margin-bottom:10px;
+}
+.buff-inputs {
+  flex:1;
+  display:flex;
+  flex-direction:column;
+  gap:4px;
+}
+.buff-inputs label {
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+.buff-inputs input {
+  width:60px;
+  margin-left:4px;
+  background:#262b36;
+  color:#fff;
+  border:1px solid #555;
+  border-radius:4px;
+  text-align:center;
+}
+.buff-chart {
+  flex:1;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+.radar-chart {
+  width:100%;
+  height:200px;
+  background:url('../resources/images/general/panel_background.avif') center/cover no-repeat;
+}
 .stats {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
