--- a/src/css/style.css
+++ b/src/css/style.css
@@ -819,6 +819,11 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
   margin-bottom: 20px;
 }
 
+.buff-row-title {
+  font-family: 'Cinzel', serif;
+  color: #e0e0ff;
+  margin-bottom: 4px;
+}
 .buff-stats-row {
   display:flex;
   gap:10px;
@@ -853,7 +858,6 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
 .radar-chart {
   width:100%;
   height:200px;
-  background:url('../resources/images/general/panel_background.avif') center/cover no-repeat;
 }
 .stats {
   display: grid;
