--- a/src/css/style.css
+++ b/src/css/style.css
@@ -887,6 +887,22 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
   border: 1px solid #444;
   cursor: pointer;
 }
+.modal-option.hide-check input {
+  display: none;
+}
+.modal-option.hide-check span {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 4px 6px;
+  border: 1px solid #444;
+  border-radius: 4px;
+}
+.modal-option.hide-check input:checked + span {
+  background: #3d4769;
+  border-color: #b6e4ff;
+  color: #fff;
+}
 .modal-option.grid {
   flex-direction: column;
   text-align: center;
