--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,6 +142,9 @@
 body[data-page="weapons"] .card {
   aspect-ratio: 1088 / 681;
 }
+body[data-page="outfits"] .card {
+  aspect-ratio: 1088 / 681;
+}
     .card.fade {
       opacity: 0;
       transition: opacity 0.3s;
@@ -173,7 +176,20 @@ body[data-page="weapons"] .card-inner::before {
   background-size: 100% 100%;
   opacity: 0.5;
 }
+body[data-page="outfits"] .card-inner::before {
+  background-size: 100% 100%;
+  opacity: 0.5;
+}
 body[data-page="weapons"] .card.owned::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: 14px;
+  background: rgba(26, 56, 32, 0.35);
+  box-shadow: 0 0 8px rgba(26, 56, 32, 0.8);
+  pointer-events: none;
+}
+body[data-page="outfits"] .card.owned::after {
   content: '';
   position: absolute;
   inset: 0;
@@ -252,10 +268,17 @@ body[data-page="pictos"] .card.owned .card-inner::before {
 body[data-page="weapons"] .card-face {
   padding: 34px 60px 20px 60px;
 }
+body[data-page="outfits"] .card-face {
+  padding: 34px 60px 20px 60px;
+}
 body[data-page="pictos"] .card-face {
   padding: 34px 60px 20px 60px;
 }
 body[data-page="weapons"] .card-back {
+  padding-left: 100px;
+  padding-right: 50px;
+}
+body[data-page="outfits"] .card-back {
   padding-left: 100px;
   padding-right: 50px;
 }
