--- a/src/css/style.css
+++ b/src/css/style.css
@@ -178,6 +178,8 @@ body[data-page="weapons"] .card-inner::before {
   opacity: 0.5;
 }
 body[data-page="weapons"] .weapon-img {
+  width: 100%;
+  height: 100%;
   position: absolute;
   inset: 60px;
   object-fit: contain;
