--- a/src/css/style.css
+++ b/src/css/style.css
@@ -188,6 +188,17 @@ body[data-page="weapons"] .weapon-img {
   pointer-events: none;
   z-index: -1;
 }
+body[data-page="outfits"] .outfit-img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  inset: 60px;
+  object-fit: contain;
+  object-position: center;
+  opacity: 0.5;
+  pointer-events: none;
+  z-index: -1;
+}
 body[data-page="outfits"] .card-inner::before {
   background-size: 100% 100%;
   opacity: 0.5;
