--- a/src/css/style.css
+++ b/src/css/style.css
@@ -189,7 +189,6 @@ body[data-page="weapons"] .weapon-img {
   z-index: -1;
 }
 body[data-page="outfits"] .outfit-img {
-  width: 100%;
   height: 100%;
   position: absolute;
   inset: 60px;
@@ -198,6 +197,12 @@ body[data-page="outfits"] .outfit-img {
   opacity: 0.5;
   pointer-events: none;
   z-index: -1;
+}
+body[data-page="outfits"] #cards p.group-title {
+  margin: 0;
+  grid-column: 1 / -1;
+  font-weight: bold;
+  font-size: 1.2em;
 }
 body[data-page="outfits"] .card-inner::before {
   background-size: 100% 100%;
