--- a/src/css/style.css
+++ b/src/css/style.css
@@ -538,6 +538,9 @@ body[data-page="outfits"] .card-back {
   right: 20px;
   z-index: 2000;
 }
+
+#modalSelect { z-index: 1100; }
+#capModal { z-index: 1050; }
 .notification {
   background: #323846;
   color: #fff;
@@ -957,8 +960,9 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
   color: #CDB48E;
   cursor: pointer;
   text-align: center;
-  margin-bottom: 6px;
+  margin: 6px 0;
   transition: transform 0.2s;
+  display: block;
 }
 .config-cap-link:hover {
   transform: scale(1.1);
